--- a/src/main/resources/view/PantallaPelicula.fxml
+++ b/src/main/resources/view/PantallaPelicula.fxml
@@ -59,7 +59,7 @@
                                                       <Insets bottom="10.0" top="2.0" />
                                                    </VBox.margin>
                                                 </Label>
-                                                <Label fx:id="lblTitulo1" alignment="TOP_LEFT" text="Director · Genero" textFill="#ec1b1b">
+                                                <Label fx:id="lblDirectorGenero" alignment="TOP_LEFT" text="Director · Genero" textFill="#ec1b1b">
                                                    <font>
                                                       <Font name="System Bold" size="20.0" />
                                                    </font>
@@ -67,20 +67,52 @@
                                                       <Insets bottom="40.0" />
                                                    </VBox.margin>
                                                 </Label>
+                                                <HBox prefHeight="20.0" prefWidth="100.0">
+                                                   <children>
+                                                      <Pane prefHeight="10.0" prefWidth="50.0" style="-fx-background-color: grey; -fx-background-radius: 4;">
+                                                         <children>
+                                                            <Label fx:id="lbluserRating" alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" layoutY="2.0" onDragDetected="#userRatingPressed" prefHeight="20.0" prefWidth="50.0" text="0.0" textAlignment="CENTER" textFill="WHITE">
+                                                               <font>
+                                                                  <Font name="System Bold" size="14.0" />
+                                                               </font>
+                                                            </Label>
+                                                         </children>
+                                                         <HBox.margin>
+                                                            <Insets />
+                                                         </HBox.margin>
+                                                         <padding>
+                                                            <Insets bottom="1.0" top="1.0" />
+                                                         </padding>
+                                                      </Pane>
+                                                      <ImageView fitHeight="20.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" right="10.0" />
+                                                         </HBox.margin>
+                                                      </ImageView>
+                                                      <Label fx:id="lblEstrenoDuracion" text="2001 · 2h 5m" textFill="WHITE">
+                                                         <font>
+                                                            <Font name="System Bold" size="14.0" />
+                                                         </font>
+                                                      </Label>
+                                                   </children>
+                                                </HBox>
                                              </children>
                                              <padding>
                                                 <Insets left="25.0" top="10.0" />
                                              </padding>
                                           </VBox>
-                                          <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="265.0" text="Añadr a " GridPane.rowIndex="1" />
+                                          <Button fx:id="btnAdd" mnemonicParsing="false" prefHeight="25.0" prefWidth="265.0" style="-fx-background-radius: 8;" text="Añadr a " GridPane.rowIndex="1">
+                                             <GridPane.margin>
+                                                <Insets bottom="2.0" left="6.0" right="6.0" top="2.0" />
+                                             </GridPane.margin></Button>
                                           <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                              <children>
-                                                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="418.0" text="Ver Trailer">
+                                                <Button fx:id="btnTrailer" mnemonicParsing="false" prefHeight="25.0" prefWidth="418.0" text="Ver Trailer">
                                                    <HBox.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </HBox.margin>
                                                 </Button>
-                                                <Label graphicTextGap="6.0" prefHeight="27.0" prefWidth="160.0" style="-fx-background-color: black;" text="&gt;_Vista:   01/01/2024" textFill="WHITE">
+                                                <Label fx:id="lblFechaVista" graphicTextGap="6.0" prefHeight="27.0" prefWidth="160.0" style="-fx-background-color: black;" text="&gt;_Vista:   01/01/2024" textFill="WHITE">
                                                    <HBox.margin>
                                                       <Insets />
                                                    </HBox.margin>
@@ -94,7 +126,46 @@
                                              <padding>
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </padding>
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="13.0" />
+                                             </GridPane.margin>
                                           </Label>
+                                          <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: grey; -fx-background-radius: 8;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                             <GridPane.margin>
+                                                <Insets bottom="2.0" left="6.0" right="6.0" top="2.0" />
+                                             </GridPane.margin>
+                                             <children>
+                                                <HBox fx:id="hBoxRating" alignment="CENTER" layoutX="12.0" layoutY="4.0" prefHeight="16.0" prefWidth="228.0" spacing="6.0">
+                                                   <children>
+                                                      <ImageView fx:id="imgFav1" fitHeight="18.0" fitWidth="200.0" nodeOrientation="INHERIT" onDragDetected="#fav1Selected" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../images/others/favUnselected.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                      <ImageView fx:id="imgFav11" fitHeight="18.0" fitWidth="200.0" nodeOrientation="INHERIT" onDragDetected="#fav2Selected" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../images/others/favUnselected.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                      <ImageView fx:id="imgFav12" fitHeight="18.0" fitWidth="200.0" nodeOrientation="INHERIT" onDragDetected="#fav3Selected" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../images/others/favUnselected.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                      <ImageView fx:id="imgFav13" fitHeight="18.0" fitWidth="200.0" nodeOrientation="INHERIT" onDragDetected="#fav4Selected" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../images/others/favUnselected.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                      <ImageView fx:id="imgFav14" fitHeight="18.0" fitWidth="200.0" nodeOrientation="INHERIT" onDragDetected="#fav5Selected" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../images/others/favUnselected.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </Pane>
                                        </children>
                                     </GridPane>
                                     <VBox fx:id="vBoxReparto" prefHeight="100.0" prefWidth="380.0">
